Bug 405515 - Parley Cannot save anything
Summary: Parley Cannot save anything
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.04
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-16 11:30 UTC by Diederik Huys
Modified: 2023-03-22 23:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diederik Huys 2019-03-16 11:30:56 UTC
Trying to Save (or SaveAs) work at any point (even just after creating a new database file) fails with :

"Writing file "" resulted in an error: Unknown File Type".

Command line output:

diederik@HP-ProBook-6550b:~$ parley
Missing QIcon  "get-hot-new-stuff"
Attempting to load .desktop at "/usr/share/parley/themes/theme_reference.desktop"
No text-to-speech plug-ins were found.
Couldn't start kuiserver from org.kde.kuiserver.service: QDBusError("org.freedesktop.DBus.Error.ServiceUnknown", "The name org.kde.kuiserver was not provided by any .service files")
kf5.kservice.sycoca: Parse error in  "/home/diederik/.config/menus/applications-merged/xdg-desktop-menu-dummy.menu" , line  1 , col  1 :  "unexpected end of file"
kxkb dbus error
Hspell: can't open /usr/share/hspell/hebrew.wgz.sizes.
sonnet.plugins.hspell: HSpellDict::HSpellDict: Init failed
kxkb dbus error
Create word type model for summary view
Missing QIcon  "practice-start"
Missing QIcon  "practice-setup"
Missing QIcon  "set-language"
Missing QIcon  "set-language"
Clear summary widget
Clear summary widget
Activating Script "/usr/share/parley/plugins/example.py"
"Parley"
Kross: "PythonScript::Constructor."
Kross: "PythonScript::execute"
Kross: "PythonScript::execute result=None"
Activating Script "/usr/share/parley/plugins/google_dictionary.py"
"Parley"
Kross: "PythonScript::Constructor."
Kross: "PythonScript::execute"
Kross: "PythonScript::execute result=None"
Kross: "PythonScript::execute connect object= signal=translateWord(QString,QString,QString) with pythonfunction=translateWord"
Activating Script "/usr/share/parley/plugins/leo-dict.py"
"Parley"
Kross: "PythonScript::Constructor."
Kross: "PythonScript::execute"
Kross: "PythonScript::execute result=None"
Kross: "PythonScript::execute connect object= signal=translateWord(QString,QString,QString) with pythonfunction=translateWord"
SaveAs failed for  ""  
why  "Unknown file type."
Comment 1 Albert Astals Cid 2023-03-22 23:23:15 UTC
Git commit 4d9abd69d6ddaf81a94c7d24ed5e64ed11dfa7ad by Albert Astals Cid, on behalf of Stefan Damm.
Committed on 22/03/2023 at 23:23.
Pushed by aacid into branch 'master'.

Fix error in appending file extension
Related: bug 430735

M  +1    -1    src/parleydocument.cpp

https://invent.kde.org/education/parley/commit/4d9abd69d6ddaf81a94c7d24ed5e64ed11dfa7ad
Comment 2 Albert Astals Cid 2023-03-22 23:26:12 UTC
Git commit fee988aa75f2b34a6408b17f1dec76ce3ca83762 by Albert Astals Cid, on behalf of Stefan Damm.
Committed on 22/03/2023 at 23:25.
Pushed by aacid into branch 'release/23.04'.

Fix error in appending file extension
Related: bug 430735
(cherry picked from commit 4d9abd69d6ddaf81a94c7d24ed5e64ed11dfa7ad)

M  +1    -1    src/parleydocument.cpp

https://invent.kde.org/education/parley/commit/fee988aa75f2b34a6408b17f1dec76ce3ca83762