Fix error in appending file extension

BUG: 405515
BUG: 430735